# MAI-CG

./: README.md
lab1/: CMakeLists.txt  curve.cpp  curve.hpp  graphics_view.cpp  graphics_view.hpp  main.cpp  main_window.cpp  main_window.hpp
lab2/: CMakeLists.txt  main_window.cpp  main_window.hpp  prism.cpp  prism.hpp
lab3/: CMakeLists.txt  figure.cpp  figure.hpp  main.cpp  main_window.cpp  main_window.hpp
lab4_5/: CMakeLists.txt  fshader.glsl  geometry_engine.cpp  geometry_engine.hpp  main.cpp  main_widget.cpp  main_widget.hpp  opengl_widget.cpp  opengl_widget.hpp  vshader.glsl
lab6/: CMakeLists.txt  geometry_engine.cpp  geometry_engine.hpp  main.cpp  main_widget.cpp  main_widget.hpp  opengl_widget.cpp  opengl_widget.hpp  vshader.glsl
lab7/: CMakeLists.txt  curve.cpp  curve.hpp  graphics_view.cpp  graphics_view.hpp  main.cpp  main_window.cpp  main_window.hpp
